--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Super Saiya-jin Token. An EthItem Token used for voting purposes in the DFO Protocol",
   "main": "build.js",
   "scripts": {
-    "build": "node build"
+    "build": "node build",
+    "docs": "yarn docs:docgen && yarn docs:mkdocs:serve",
+    "docs:build": "yarn docs:docgen && yarn docs:mkdocs:build",
+    "docs:clean": "rm -r docs/{md-build,gh-pages}",
+    "docs:serve": "yarn docs:docgen && yarn docs:mkdocs:serve",
+    "docs:docgen": "py-solidity-docgen --input out --output docs/md-build && cp *.md docs/md-build",
+    "docs:mkdocs:build": "cd docs && mkdocs build",
+    "docs:mkdocs:serve": "yarn docs:docgen && cd docs && mkdocs serve"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.2.0",
